--- a/css/footer.css
+++ b/css/footer.css
@@ -163,12 +163,9 @@ button.btn_footer:hover{
 
 
  
+/*====== 行動版 RWD | 320px ~ 360px ======*/
+@media screen and (min-width: 320px) and (max-width: 359.98px){
 
-
-
-/*====== 行動版 RWD | 320px ~ 768px ======*/
-
-@media screen and (min-width: 320px) and (max-width: 767.98px){
   footer.footer{
     width: 90%;
   }
@@ -208,7 +205,126 @@ button.btn_footer:hover{
     bottom: -40px;
     left: 0;
     right: 0;
+  } 
+
+  div.copyrights_statement{
+    position: absolute;
+    bottom: -210px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    border-top: 1px solid black;
+    font-size: 11px;
   }
+ 
+  div.footer_rightside{
+    width: 100%;
+    margin: 40px auto 60px;
+    height: auto;
+  }
+  div.sitemap{
+    justify-content: space-between;
+    width: 100%;
+  }
+  div.sitemap_parent{
+    padding: 0;
+    text-align: center;
+    font-size: 12px;
+    min-width: 58px;
+  }
+
+  div.sitemap_child{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 0 0;
+    font-size: 12px;
+
+  }
+
+  div.footer_solution_list{
+    width: 80px;
+  }
+ 
+  div.sitemap_child a.footer_page_link_child{
+    margin-left: 0;
+  }
+
+  div.footer_login_signup_block{
+    width: 20%;
+    margin: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    margin-top: -9.4px;
+  }
+
+ 
+  button.btn_footer{
+    font-size: 12px;
+    border: none;
+    background: none;
+    color: black;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 700;
+    margin-bottom: 10px;
+    width: 40px;
+  }
+
+  button.btn_footer:hover{
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+    border-bottom: 1px solid black;
+
+  }
+
+}
+
+
+/*====== 行動版 RWD | 360px ~ 414px ======*/
+@media screen and (min-width: 360px) and (max-width: 414px){
+
+  footer.footer{
+    width: 90%;
+  }
+  div.footer_container{
+    flex-direction: column;
+    position: relative;
+    height: auto;
+    width: 100%;
+  }
+
+  div.footer_leftside{
+    width: 95%;
+    margin: 0 auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0;
+  }
+
+  img.logo_footer{
+    transform: translateX(-12px);
+  }
+
+  div.social_media_block{
+    padding: 0;
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    right: 0;
+  }
+
+  div.copyrights{
+    width: 100%;
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    right: 0;
+  } 
 
   div.copyrights_statement{
     position: absolute;
@@ -259,12 +375,131 @@ button.btn_footer:hover{
     justify-content: flex-start;
     align-items: center;
     text-align: center;
-    margin-top: -7.8px;
+    margin-top: -9.1px;
   }
 
  
   button.btn_footer{
     font-size: 12px;
+    border: none;
+    background: none;
+    color: black;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 700;
+    margin-bottom: 10px;
+    width: 40px;
+  }
+
+  button.btn_footer:hover{
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+    border-bottom: 1px solid black;
+
+  }
+  
+}  
+
+
+
+/*====== 行動版 RWD | 414px ~ 768px ======*/
+@media screen and (min-width: 414px) and (max-width: 767.98px){
+  footer.footer{
+    width: 90%;
+  }
+  div.footer_container{
+    flex-direction: column;
+    position: relative;
+    height: auto;
+    width: 100%;
+  }
+
+  div.footer_leftside{
+    width: 95%;
+    margin: 0 auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0;
+  }
+
+  img.logo_footer{
+    transform: translateX(-12px);
+  }
+
+  div.social_media_block{
+    padding: 0;
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    right: 0;
+  }
+
+  div.copyrights{
+    width: 100%;
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    right: 0;
+  } 
+
+  div.copyrights_statement{
+    position: absolute;
+    bottom: -180px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    border-top: 1px solid black;
+    font-size: 11px;
+  }
+ 
+  div.footer_rightside{
+    width: 100%;
+    margin: 40px auto 60px;
+    height: auto;
+  }
+  div.sitemap{
+    justify-content: space-between;
+    width: 100%;
+  }
+  div.sitemap_parent{
+    padding: 0;
+    text-align: center;
+    font-size: 14px;
+
+  }
+
+  div.sitemap_child{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 0 0;
+    font-size: 14px;
+
+  }
+
+  div.footer_solution_list{
+    width: 80px;
+  }
+ 
+  div.sitemap_child a.footer_page_link_child{
+    margin-left: 0;
+  }
+
+  div.footer_login_signup_block{
+    width: 20%;
+    margin: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    margin-top: -9.1px;
+  }
+
+ 
+  button.btn_footer{
+    font-size: 14px;
     border: none;
     background: none;
     color: black;
@@ -293,6 +528,10 @@ button.btn_footer:hover{
   footer.footer{
     padding: 0 20px;
   }
+
+  div.sitemap_parent{
+    font-size: 15px;
+  }
   
 
   div.footer_login_signup_block{
@@ -314,6 +553,7 @@ button.btn_footer:hover{
     font-weight: 700;
     margin-bottom: 10px;
     width: 40px;
+    font-size: 15px;
   }
 
   button.btn_footer:hover{
