--- a/css/personal.css
+++ b/css/personal.css
@@ -132,8 +132,39 @@ embed.personal_slide{
 }
 
 
-/*====== 行動版 RWD | 320px ~ 768px ======*/
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.personal_intro_block{
+    margin-top: 60px;
+  }
+
+  div.personal_intro_eng, div.personal_intro_zh{
+    font-size: 22px;
+  }
+
+  div.personal_intro_slogan{
+    font-size: 14px;
+  }
+
+  div.personal_interface_block{
+    width: 100%;
+  }
+
+  div.shift_btn{
+    width: 80%;
+  }
+
+  button.btn1, button.btn2, button.btn3{
+    font-size: 10px;
+    padding: 10px 10px 20px;
+  }
+}
+
+
+
+/*====== 行動版 RWD | 414px ~ 768px ======*/
+@media screen and (min-width: 414px) and (max-width: 767.98px){
 
   div.personal_intro_eng, div.personal_intro_zh{
     font-size: 24px;
@@ -194,15 +225,13 @@ div.personal_feature_slogan{
 }
 
 div.feature_container{
-  display: inline-flex;
+  display: flex;
   width: 1080px;
   text-align: center;
   justify-content: space-between;
 }
 
-div.feature_leftside, div.feature_center, div.feature_rightside{
-  width: 360px;
-}
+
 
 div.feature_title, div.feature_subtitle, div.feature_content{
   /* border: 1px solid blue; */
@@ -244,6 +273,8 @@ button.feature_btn1, button.feature_btn2, button.feature_btn3{
   font-family: 'Noto Sans TC', sans-serif;
   border: none;
   cursor: pointer;
+  width: 110px;
+  height: 45px;
 }
 
 button.feature_btn1:hover, button.feature_btn2:hover, button.feature_btn3:hover{
@@ -255,17 +286,191 @@ button.feature_btn1:focus, button.feature_btn2:focus, button.feature_btn3:focus{
 }
 
 
-/*====== 行動版 RWD | 320px ~ 768px ======*/
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.personal_feature_block{
+    margin: 0 auto 20px;
+    width: 100%;
+  }
+
+  div.personal_feature_slogan{
+    width: 80%;
+    font-size: 24px;
+    padding-bottom: 20px;
+    margin-bottom: 50px;
+  }
+
+  div.feature_container{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  div.feature_leftside, div.feature_center, div.feature_rightside{
+    margin-bottom: 60px;
+  }
+
+  div.feature_title{
+    font-size: 20px;
+  }
+
+  img.feature_img{
+    width: 200px;
+    height: 200px;
+  }
+
+  div.feature_content{
+    font-size: 14px;
+    padding-bottom: 0;
+  }
 
 }
 
 
+/*====== 行動版 RWD | 414px ~ 660px ======*/
+@media screen and (min-width: 414px) and (max-width: 659.98px){
 
-/*====== 行動版 RWD | 768px ~ 1200px ======*/
-@media screen and (min-width: 768px) and (max-width: 1199.98px){
+  div.personal_feature_block{
+    margin: 0 auto 0px;
+    width: 100%;
+  }
+
+  div.personal_feature_slogan{
+    width: 80%;
+    font-size: 24px;
+    padding-bottom: 20px;
+    margin-bottom: 50px;
+  }
+
+  div.feature_container{
+    width: 100%;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  div.feature_leftside, div.feature_center, div.feature_rightside{
+    margin-bottom: 60px;
+    width: 100%;
+  }
+
+  div.feature_title{
+    font-size: 28px;
+  }
+
+  img.feature_img{
+    width: 200px;
+    height: 200px;
+  }
+
+  div.feature_content{
+    font-size: 15px;
+    padding-bottom: 0;
+  }
+
+}
 
 
+/*====== 行動版 RWD | 660px ~ 1080px ======*/
+@media screen and (min-width: 660px) and (max-width: 1079.98px){
+
+  div.personal_feature_block{
+    margin: 0 auto 60px;
+    width: 100%;
+  }
+
+  div.personal_feature_slogan{
+    width: 100%;
+  }
+
+  div.feature_container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.feature_leftside, div.feature_center, div.feature_rightside{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    margin-bottom: 60px;
+  }
+
+  div.feature_align1{
+    width: 50%;
+    display: flex;
+    align-items: center;
+  }
+
+  div.feature_align2{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    height: auto;
+    width: 50%;
+    padding-top: 50px;
+    padding-left: 20px;
+    text-align: left;
+  }
+
+  div.feature_title{
+    transform: translateY(0);
+    order: 2;
+    font-size: 28px;
+    width: 80%;
+    min-width: 150px;
+    text-align: left;
+  }
+
+  div.feature_subtitle{
+    width: 100%;
+  }
+
+  div.feature_content{
+    padding: 0;
+    transform: translateY(0);
+    width: 70%;
+  }
+
+  img.feature_img{
+    min-width: 180px;
+    order: 1;
+  }
+
+  button.feature_btn1, button.feature_btn2, button.feature_btn3{
+    margin-top: 30px;
+  }
+  
+
+}
+
+@media screen and (min-width: 660px) and (max-width: 890px){
+  br.-break{
+    display: none;
+  }
+}
+
+
+
+/*====== 行動版 RWD | 1080px ~ 1200px ======*/
+@media screen and (min-width: 1080px) and (max-width: 1199.98px){
+
+  div.personal_feature_block{
+    margin: 0 auto 100px;
+    width: 100%;
+  }
+
+  div.personal_feature_slogan{
+    width: 100%;
+  }
+
+  div.feature_container{
+    width: 100%;
+  }
 }
 
 
@@ -288,7 +493,8 @@ div.feature_banner{
 div.feature_text{
   text-align: left;
   letter-spacing: 0.04em;
-  padding-top: 16px;
+  padding: 16px 10px 0;
+  width: 50%;
 }
 
 div.feature_highlight_title{
@@ -361,16 +567,143 @@ button.btn_left.-on, button.btn_right.-on{
 }
 
 
-/*====== 行動版 RWD | 320px ~ 768px ======*/
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.feature_banner{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 0;
+    margin-bottom: 30px;
+  }
+
+  div.feature_text{
+    width: 90%;
+    margin-bottom: 16px;
+    position: relative;
+    text-align: center;
+  }
+
+  
+
+
+  div.feature_img{
+    width: 90%;
+  }
+
+  div.feature_highlight_title{
+    text-align: center;
+    font-size: 18px;
+  }
+
+  div.feature_highlight{
+    font-size: 14px;
+  }
+
+  div.feature_highlight2{
+    font-size: 14px;
+    opacity: 0;
+    position: absolute;
+    opacity: 0;
+    transition: opacity .5s, position .5s;
+  }
+
+  div.feature_highlight2.-on{
+    opacity: 1;
+    position: relative;
+  }
+
+  
+
+  #feature_banner2 div.feature_img{
+    order: 2;
+  }
+
+  #feature_banner2 div.feature_text{
+    order: 1;
+  }
+
 
 }
+
+
+/*====== 行動版 RWD | 414px ~ 768px ======*/
+@media screen and (min-width: 414px) and (max-width: 767.98px){
+
+  div.feature_banner{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 0;
+    margin-bottom: 30px;
+  }
+
+  div.feature_text{
+    width: 90%;
+    margin-bottom: 16px;
+    position: relative;
+    text-align: center;
+  }
+
+  div.feature_title{
+    font-size: 22px;
+  }
+
+  div.feature_img{
+    width: 90%;
+  }
+
+  div.feature_highlight_title{
+    text-align: center;
+    font-size: 22px;
+  }
+
+  div.feature_highlight{
+    font-size: 15px;
+  }
+
+  div.feature_highlight2{
+    font-size: 15px;
+    opacity: 0;
+    position: absolute;
+    opacity: 0;
+    transition: opacity .5s, position .5s;
+  }
+
+  div.feature_highlight2.-on{
+    opacity: 1;
+    position: relative;
+  }
+
+  
+
+  #feature_banner2 div.feature_img{
+    order: 2;
+  }
+
+  #feature_banner2 div.feature_text{
+    order: 1;
+  }
+
+
+}  
+
 
 
 
 /*====== 行動版 RWD | 768px ~ 1200px ======*/
 @media screen and (min-width: 768px) and (max-width: 1199.98px){
 
+  div.feature_banner{
+    width: 100%;
+  }
+
+  div.feature_text{
+    width: 66%;
+  }
 
 }
 
@@ -389,29 +722,27 @@ div.bottom_banner_container{
   text-align: center;
   letter-spacing: 0.04em;
   margin: 0 auto;
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
   width: 100%;
+  position: relative;
 }
 
 div.left_container{
-  width: 20%;
-  /* border: 1px solid red; */
+  position: absolute;
+  width: 30%;
+  height: 50%;
+  left: 0;
+  top: 50px;
 }
 
 div.middle_container{
-  width: 60%;
+  width: 100%;
   /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-div.right_container{
-  width: 20%;
-  /* border: 1px solid red; */
-
 }
 
 div.bottom_title{
@@ -427,15 +758,15 @@ div.bottom_content{
 }
 
 img.bird_flying{
-  width: 128px;
-  position: relative;
-  transform: translate(120px, -40px);
+  width: 120px;
+  position: absolute;
+  transform: translate(0%, -50px);
 }
 
 img.line{
-  width: 40%;
+  width:100%;
   position: absolute;
-  transform: translate(-300px, 15px);
+  transform: translate(-100%, 0px);
 }
 
 div.getready{
@@ -458,3 +789,82 @@ button.ready{
 button.ready:hover{
   box-shadow: 1px 2px 2px 0px #00000040;
 }
+
+
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.bottom_banner{
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  img.bird_flying, img.line{
+    display: none;
+  }
+
+  div.bottom_title{
+    border-bottom: 1px solid black;
+    width: 90%;
+    font-size: 20px;
+  }
+
+  div.bottom_content{
+    font-size: 14px;
+  }
+
+}  
+
+
+/*====== 行動版 RWD | 414px ~ 768px ======*/
+@media screen and (min-width: 414px) and (max-width: 767.98px){
+
+  div.bottom_banner{
+    width: 100%;
+  }
+
+  img.bird_flying, img.line{
+    display: none;
+  }
+  
+  div.bottom_title{
+    border-bottom: 1px solid black;
+    font-size: 24px;
+  }
+  
+
+}  
+
+
+
+/*====== 行動版 RWD | 768px ~ 1080px ======*/
+@media screen and (min-width: 768px) and (max-width: 1079.98px){
+
+  div.bottom_banner{
+    width: 100%;
+  }
+  
+  img.bird_flying, img.line{
+    display: none;
+  }
+
+  div.bottom_title{
+    border-bottom: 1px solid black;
+  }
+
+  
+
+}
+
+
+/*====== 行動版 RWD | 1080px ~ 1200px ======*/
+@media screen and (min-width: 1080px) and (max-width: 1199.98px){
+
+  div.bottom_banner{
+    width: 100%;
+  }
+
+  
+  
+
+}  
