--- a/css/about.css
+++ b/css/about.css
@@ -61,10 +61,32 @@ img.dreamer{
   z-index: -2;
 }
 
- 
 
-/*====== 行動版 RWD | 320px ~ 768px ======*/
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.first_banner{
+    margin: 80px auto 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  div.first_banner_title{
+    font-size: 24px;
+    top: -20px;
+  }
+  div.first_banner_subtitle{
+    font-size: 14px;
+    padding-top: 10px;
+    top: 15%;
+  }
+
+} 
+
+
+
+/*====== 行動版 RWD | 414px ~ 768px ======*/
+@media screen and (min-width: 414px) and (max-width: 767.98px){
   div.first_banner{
     margin: 80px auto 0;
     width: 100%;
@@ -226,8 +248,133 @@ button.start:hover{
 }
 
 
-/*====== 行動版 RWD | 320px ~ 768px ======*/
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.mission_block{
+    width: 100%;
+  }
+  div.our_mission{
+    min-width: 100%;
+  }
+
+  div.mission_title{
+    font-size: 24px;
+    width: 100%;
+  }
+
+  div.mission_intro{
+    font-size: 14px;
+    width: 81%;
+  }
+
+  br.-break{
+    display: none;
+  }
+
+  div.brand_feature_block{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.feature_row{
+    width: 100%;
+    flex-direction: column;
+    height: auto;
+  }
+
+  div.row_card{
+    margin: -60px auto -30px;
+  }
+
+  div.card_title{
+    font-size: 26px;
+    width: 100%;
+  }
+
+  div.card_text{
+    font-size: 14px;
+    width: 83%;
+  }
+
+  div.go_signup{
+    width: 100%;
+    margin-top: -20px;
+    margin-bottom: 20px;
+    padding-top: 0;
+  }
+
+  div.go{
+    width: 100%;
+  }
+
+}
+
+/*====== 行動版 RWD | 414px ~ 460px ======*/
+@media screen and (min-width: 414px) and (max-width: 459.98px){
+
+  div.mission_block{
+    width: 100%;
+  }
+  div.our_mission{
+    min-width: 100%;
+  }
+
+  div.mission_title{
+    font-size: 26px;
+    width: 100%;
+  }
+
+  div.mission_intro{
+    font-size: 14px;
+    width: 87%;
+  }
+
+  br.-break{
+    display: none;
+  }
+
+  div.brand_feature_block{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.feature_row{
+    width: 100%;
+    flex-direction: column;
+    height: auto;
+  }
+
+  div.row_card{
+    margin: -60px auto -30px;
+  }
+
+  div.card_title{
+    font-size: 26px;
+    width: 100%;
+  }
+
+  div.card_text{
+    font-size: 14px;
+    width: 83%;
+  }
+
+  div.go_signup{
+    width: 100%;
+    margin-top: -20px;
+  }
+
+  div.go{
+    width: 100%;
+  }
+
+}
+
+
+/*====== 行動版 RWD | 460px ~ 768px ======*/
+@media screen and (min-width: 460px) and (max-width: 767.98px){
   div.mission_block{
     width: 100%;
   }
@@ -419,8 +566,130 @@ a.hr_src{
 }
 
 
-/*====== 行動版 RWD | 320px ~ 768px ======*/
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.our_team{
+    min-width: 100%;
+  }
+  div.team_title{
+    font-size: 24px;
+    width: 100%;
+  }
+
+  div.team_intro{
+    font-size: 14px;
+    width: 83%;
+  }
+
+  br.-break1{
+    display: none;
+  }
+
+  div.team_feature_block{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.team_row{
+    width: 90%;
+    flex-direction: column;
+    height: auto;
+    margin-bottom: 30px;
+  }
+
+  div.team_row_card{
+    width: 100%;
+    max-width: 500px;
+    margin-top: 30px;
+  }  
+
+  div.team_card_title{
+    font-size: 26px;
+    width: 100%;
+    top: 40px;
+  }
+
+  div.team_card_text{
+    font-size: 14px;
+    width: 83%;
+    bottom: 40px;
+  }
+
+  div.learn_more{
+    width: 100%;
+    margin: -60px auto 60px;
+  }
+
+  a.hr_src{
+    font-size: 14px;
+  }
+
+}
+
+/*====== 行動版 RWD | 414px ~ 520px ======*/
+@media screen and (min-width: 414px) and (max-width: 519.98px){
+
+  div.our_team{
+    min-width: 100%;
+  }
+  div.team_title{
+    font-size: 24px;
+    width: 100%;
+  }
+
+  div.team_intro{
+    font-size: 14px;
+    width: 83%;
+  }
+
+  br.-break1{
+    display: none;
+  }
+
+  div.team_feature_block{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.team_row{
+    width: 90%;
+    flex-direction: column;
+    height: auto;
+    margin-bottom: 30px;
+  }
+
+  div.team_row_card{
+    width: 100%;
+    max-width: 500px;
+    margin-top: 30px;
+  }  
+
+  div.team_card_title{
+    font-size: 26px;
+    width: 100%;
+  }
+
+  div.team_card_text{
+    font-size: 15px;
+    width: 83%;
+  }
+
+  div.learn_more{
+    width: 100%;
+    margin: -60px auto 60px;
+  }
+
+  a.hr_src{
+    font-size: 14px;
+  }
+
+}
+
+/*====== 行動版 RWD | 520px ~ 768px ======*/
+@media screen and (min-width: 520px) and (max-width: 767.98px){
 
   div.our_team{
     min-width: 100%;
@@ -472,7 +741,6 @@ a.hr_src{
   a.hr_src{
     font-size: 14px;
   }
-
 }
 
 
@@ -603,8 +871,27 @@ button.sub_btn:hover{
 }
 
 
-/*====== 行動版 RWD | 320px ~ 768px ======*/
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.subscribe_title{
+    font-size: 18px;
+  }
+
+  div.subscribe_text{
+    font-size: 14px;
+  }
+
+  input.follow{
+    width: 100%;
+  }
+
+}
+
+
+/*====== 行動版 RWD | 414px ~ 768px ======*/
+@media screen and (min-width: 414px) and (max-width: 767.98px){
 
   div.subscribe_title{
     font-size: 20px;
