--- a/css/personal.css
+++ b/css/personal.css
@@ -159,6 +159,11 @@ embed.personal_slide{
     font-size: 10px;
     padding: 10px 10px 20px;
   }
+
+  embed.personal_slide{
+    width: 90%;
+  }
+
 }
 
 
@@ -181,6 +186,10 @@ embed.personal_slide{
   button.btn1, button.btn2, button.btn3{
     font-size: 14px;
     /* width: 28%; */
+  }
+
+  embed.personal_slide{
+    width: 90%;
   }
 
 }
